content/v1.8.1/plugins/assist.md
---
title: "Assist"
metaTitle: "Assist"
metaDescription: "How to setup OpenReplay Assist and support your end users through live screen and WebRTC."
---

OpenReplay Assist allows you to support your users by seeing their live screen and instantly hopping on call (WebRTC) with them without requiring any 3rd-party screen sharing software.

## Installation

```bash
npm i @openreplay/tracker-assist
```

## Usage

### With JavaScript snippet

If your OpenReplay tracker is set up using the JS snippet, then simply replace the `.../openreplay.js` occurrence with `.../openreplay-assist.js`. Below is an example of how the script should like after the change:

```js
<!-- OpenReplay Tracking Code -->
<script>
var initOpts = { projectKey: "GxPpaDARdn2345fgt321" };
var startOpts = { userID: "" };
(function(A,s,a,y,e,r){
  r=window.OpenReplay=[e,r,y,[s-1, e]];
  s=document.createElement('script');s.src=A;s.async=!a;
  ...
})("//static.openreplay.com/latest/openreplay-assist.js", 1, 0, initOpts, startOpts);
</script>
```

### With NPM

Initialize the tracker then load the `@openreplay/tracker-assist` plugin.

#### If your website is a Single Page Application (SPA)

```js
import Tracker from '@openreplay/tracker';
import trackerAssist from '@openreplay/tracker-assist';

const tracker = new Tracker({
  projectKey: PROJECT_KEY,
});
tracker.use(trackerAssist(options)); // check the list of available options below

tracker.start();

```

#### If your web app is Server-Side-Rendered (SSR)

Follow the below example if your app is SSR. Ensure `tracker.start()` is called once the app is started (in `useEffect` or `componentDidMount`).

```js
import OpenReplay from '@openreplay/tracker/cjs';
import trackerFetch from '@openreplay/tracker-assist/cjs';

const tracker = new OpenReplay({
  projectKey: PROJECT_KEY
});
tracker.use(trackerAssist(options)); // check the list of available options below

//...
function MyApp() {
  useEffect(() => { // use componentDidMount in case of React Class Component
    tracker.start();
  }, [])
//...
}
```

## Options

The assist plugin supports the below options:

```js
trackerAssist({
  callConfirm?: string|ConfirmOptions;
  controlConfirm?: string|ConfirmOptions;
  config?: object;
  onAgentConnect?: () => (()=>void | void);
  onCallStart?: () => (()=>void | void);
  onRemoteControlStart?: () => (()=>void | void);
})
```

### Widgets Customization

The remote control as well as the call widgets, those seen by the end user, can be fully customized.

#### Remote Control Widget

```js
type ConfirmOptions = {
  text?:string,
  style?: StyleObject, // style object (i.e {color: 'red', borderRadius: '10px'})
  confirmBtn?: ButtonOptions, 
  declineBtn?: ButtonOptions
}

type ButtonOptions = HTMLButtonElement | string | {
  innerHTML?: string, // to pass an svg string or text
  style?: StyleObject, // style object (i.e {color: 'red', borderRadius: '10px'})
}
```

#### Call Widget

It's possible to customize every aspect of this widget via the below set of `ids` and `classes`. `Ids` serve as anchors for individual buttons/elements whereas `classes` can be used for group containers.

| HTML Type | Name(s) | Description |
|----------|-------------|-------------|
|id | `or-assist` | Widget container |
|class | `card`, `border-dark`, `shadow` and `drag-area` | Styles for the card's border and shadow |
|id | `controls`  | Container for the calling part inside the widget |
|class | `card-header` | Styles for card header of the call widget (the one showing “Call with <agent name>” next to a timer) |
|id | `agent-name` | Container for agent's name |
|id | `duration` | Container for timer |
|id | `video-container` | User’s own video feed container |
|id | `remote-stream` | Agent’s video feed |
|class | `card-footer` | Container for buttons Mute, Video, End Call |
|id | `audio-btn` | Mute button |
|id | `video-btn` | Video button |
|id | `end-call-btn` | End call button |
|id | `remote-control-row` | Row for remote controls |
|id | `end-control-btn` | Id for the end control button |

### Callbacks

Here is the list of all callbacks:

- `callConfirm`: Customize the text and/or layout of the call request popup. 
- `controlConfirm`: Customize the text and/or layout of the remote control request popup.
- `config`: Contains any custom ICE/TURN server configuration. Defaults to `{ 'iceServers': [{ 'urls': 'stun:stun.l.google.com:19302' }], 'sdpSemantics': 'unified-plan' }`.
- `onAgentConnect: () => (()=>void | void)`: This callback function is fired as soon as a live session starts and sends back the agent's details (email, name and query). It can also return `onAgentDisconnect` which will be called when the session is disconnected. In case of an unstable connection, this may be called several times. Below is an example:

```js
onAgentConnect = ({ email, name, query }) => {
  console.log("Live session started")
  const onAgentDisconnect =  () => console.log("Live session stopped")
  return onAgentDisconnect
}
```

- `onCallStart: ({ email, name, query }) => (()=>void | void)`: This callback function is fired as soon as a call (webRTC) starts  and sends back the agent's details (email, name and query). It can also return `onCallEnd` which will be called when the call ends. In case of an unstable connection, this may be called several times. Below is an example:

```js
onCallStart: () => {
  console.log("Call started")
  const onCallEnd = () => console.log("Call ended")
  return onCallEnd
}
```

- `onRemoteControlStart: ({ email, name, query }) => (()=>void | void)`: This callback function is fired as soon as a remote control session starts and sends back the agent's details (email, name and query). It can also return `onRemoteControlEnd` which will be called when the remote control permissions are revoked. Below is an example:

```js
onRemoteControlStart: () => {
  console.log("Remote control started")
  const onCallEnd = () => console.log("Remote control ended")
  return onCallEnd
}
```

## Troubleshooting

Having trouble setting up this plugin? Please connect to our [Slack](https://slack.openreplay.com) and get help from our community.